--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1124,13 +1124,13 @@ span.dropdown-item.radio-btns {
   transform: none !important;
 }
 .dropdown-menu.show:after {
-  top: auto;
-  bottom: -10px;
-  right: 5px;
+  top: -10px;
+  bottom: 0;
+  left:4px;
   -webkit-transform: rotate(-135deg);
   transform: rotate(-135deg);
-  -webkit-box-shadow: -3px -3px 5px rgba(0, 0, 0, 0.16);
-  box-shadow: -3px -3px 5px rgba(0, 0, 0, 0.16);
+  -webkit-box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.16);
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.16);
 }
 .dropdown-menu.show:after {
   position: absolute;
@@ -1138,8 +1138,8 @@ span.dropdown-item.radio-btns {
   background: inherit;
   width: 18px;
   height: 18px;
-  border-left: 1px solid rgba(138, 150, 163, 0.25);
-  border-top: 1px solid rgba(138, 150, 163, 0.25);
+  border-right: 1px solid rgba(138, 150, 163, 0.25);
+  border-bottom: 1px solid rgba(138, 150, 163, 0.25);
   z-index: -1;
 }
 .dropdown-menu.show {
@@ -7559,4 +7559,16 @@ input.authentication-input {
 
 .post-content .post-image .post-view-image {
   width: 100%;
+}
+
+.Notify__containerTopRight___3Aype{
+  top: 50px!important;
+}
+
+.Notification__notification--success___2txWa{
+  height: 3em!important;
+}
+
+.Notification__close-all___3YIP0{
+  top: 9px!important;
 }
