--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -927,7 +927,7 @@ img.svg-clone.m-verified {
   border-left: 0 !important;
   border-right: 0 !important;
   border-bottom: 1px solid rgba(138, 150, 163, 0.2);
-  border-radius: 0px;
+  border-radius: 0px!important;
   margin-top: 10px;
   color: #cacdd2;
   opacity: 0.7;
@@ -2311,19 +2311,19 @@ a.main-header-menu.icon-with-round-hover {
 /****  floating-Lable style start ****/
 .floating-label {
   position: relative;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 .floating-input,
 .floating-select {
   /* font-size: 14px; */
-  padding: 4px 4px;
+  padding: 4px 10px;
   display: block;
   width: 100%;
   height: 48px;
   background-color: transparent;
   border: 1px solid rgba(138, 150, 163, 0.25);
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 600;
 }
 .floating-input:focus,
@@ -2347,27 +2347,27 @@ a.main-header-menu.icon-with-round-hover {
   border-top: none;
 }
 
-.floating-form label {
-  color: #999;
+.floating-form .default-label {
+  top: -10px;
+  color: #0091ea;
   font-size: 14px;
   font-weight: normal;
   position: absolute;
   pointer-events: none;
   left: 20px;
-  top: 13px;
   transition: 0.2s ease all;
   -moz-transition: 0.2s ease all;
   -webkit-transition: 0.2s ease all;
+  background: #fff;
 }
 
-.floating-input:focus ~ label,
+/* .floating-input:focus ~ label,
 .floating-input:not(:placeholder-shown) ~ label {
-  top: -10px;
   font-size: 14px;
   color: #0091ea;
   left: 20px;
   background: #fff;
-}
+} */
 
 .floating-select:focus ~ label,
 .floating-select:not([value=""]):valid ~ label {
@@ -2403,12 +2403,12 @@ a.main-header-menu.icon-with-round-hover {
 }
 
 /* active state */
-.floating-input:focus ~ .highlight,
+/* .floating-input:focus ~ .highlight,
 .floating-select:focus ~ .highlight {
   -webkit-animation: inputHighlighter 0.3s ease;
   -moz-animation: inputHighlighter 0.3s ease;
   animation: inputHighlighter 0.3s ease;
-}
+} */
 
 /* animation */
 @-webkit-keyframes inputHighlighter {
@@ -4467,6 +4467,13 @@ span.new-user-name:after {
   white-space: nowrap;
   text-align: center;
   text-transform: uppercase;
+}
+
+.post-btn.btn-primary:hover,
+.post-btn.btn-primary:focus,
+.post-btn.btn-primary:active{
+  background: rgba(138, 150, 163, 0.75) !important;
+  border-color: rgba(138, 150, 163, 0.75) !important ;
 }
 .post-create-header {
   display: block;
@@ -7571,4 +7578,83 @@ input.authentication-input {
 
 .Notification__close-all___3YIP0{
   top: 9px!important;
+}
+
+.suggest-img {
+  color: #22272c;
+  font: 20px Impact;
+  vertical-align: middle;
+}
+
+.edit-profile .inuput-help a{
+  padding-left: 0.5em;
+  padding-right: 0.2em;
+}
+
+.sent-tip-modal .custom-radio .custom-control-label::before{
+  height: 20px;
+  width: 20px;
+}
+
+.sent-tip-modal .custom-radio .custom-control-label::after{
+  top: -2px !important;
+  left: -19px !important;
+  display: block;
+  width: 2.8rem !important;
+  height: 2.8rem !important;
+}
+
+.sent-tip-modal .custom-control-label {
+  font-size: 14px;
+  font-weight: 400;
+  padding-left: 1.2em;
+  color: #0091ea;
+}
+
+.sent-tip-modal .custom-control-inline{
+  margin-bottom: 1.5em;
+}
+
+.withdraw-modal .custom-radio .custom-control-label::before{
+  height: 20px;
+  width: 20px;
+}
+
+.withdraw-modal .custom-radio .custom-control-label::after{
+  top: -2px !important;
+  left: -19px !important;
+  display: block;
+  width: 2.8rem !important;
+  height: 2.8rem !important;
+}
+
+.withdraw-modal .custom-control-label {
+  font-size: 14px;
+  font-weight: 400;
+  padding-left: 1.2em;
+  color: #0091ea;
+}
+
+.withdraw-modal .label-default-1 {
+  font-size: 14px;
+  font-weight: 500;
+  margin-top: 1em;
+}
+
+.flex-content{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cancel-btn.btn.btn-primary:hover {
+  background-color: #0091ea!important;
+}
+
+.modal-body{
+  padding:2em 2em!important;
+}
+
+.modal-header {
+  padding:2em 2em!important;
 }
