--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -239,6 +239,11 @@ Version: 1.0
         margin-top: 45px!important;
         margin-bottom: 2em;
     }
+
+    .document-upload-sec {
+        margin-top: 45px!important;
+        margin-bottom: 2em;
+    }
 }
 
 @media (max-width: 575.98px) {}
