ui changes done

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7722,3 +7722,7 @@ input.authentication-input {
   margin-bottom: 2em;
 }
 
+.landing-main-wrapper{
+  padding-top: 4em;
+  padding-bottom: 2em;
+}
