loader and ui fixes done

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -38,6 +38,7 @@ span.sidebar-hamburger-user-profile img {
 }
 .sidebar-menus-item img {
   margin: 0 12px 0 0;
+  width:1.8em;
 }
 
 .drawer__title {
@@ -54,7 +55,7 @@ span.sidebar-hamburger-user-profile img {
   left: 0;
   width: 100%;
   z-index: 200;
-  opacity: 0;
+  opacity: 0.8;
 
   transition: opacity 0.3s;
   will-change: opacity;
@@ -68,7 +69,8 @@ span.sidebar-hamburger-user-profile img {
 
 .drawer__header {
   /* Optional */
-  padding: 1.5rem;
+  /* padding: 1.5rem; */
+  padding:18px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -113,6 +115,8 @@ span.sidebar-hamburger-user-profile img {
     transform: translate3d(103%, 0, 0); */
   -webkit-overflow-scrolling: touch;
   box-shadow: none;
+  font-family: 'Roboto', sans-serif;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
 .drawer__content {
@@ -122,7 +126,7 @@ span.sidebar-hamburger-user-profile img {
   height: 100%;
   flex-grow: 1;
   /* Optional */
-  padding: 1.5rem;
+  /* padding: 1.5rem; */
   padding-top: 0px;
 }
 
@@ -155,8 +159,35 @@ span.sidebar-hamburger-user-profile {
   background: #fff;
 }
 a.l-sidebar__avatar {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1em;
 }
+
+.add-icon{
+  color: #000;
+  padding-right: 0.3em;
+}
+
+.drawer .drawer__header .pull-left.side-user-head .media:first-child{
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: 5px;
+  margin-right: 0;
+}
+
+.drawer .drawer__header .pull-left.side-user-head .media:first-child:after{
+    content: "•";
+    margin: 0 6px;
+    font-size: 15px;
+}
+
+.drawer .drawer__header .pull-left.side-user-head .media{
+  margin-left: 0;
+  padding-left: 0;
+}
+
 .m-arrow {
   margin: 0 8px 0 auto;
 }
@@ -1102,8 +1133,8 @@ p.terms {
     flex-wrap: wrap; */
 }
 .list-inline li a {
-  color: #8a96a3;
-  font-size: 13px;
+  color: #000000;
+  font-size: 15px;
   text-decoration: none;
 }
 .list-inline > li {
@@ -1334,7 +1365,7 @@ a.title-container {
 }
 .post-header .user-image {
   border-radius: 1000px;
-  object-fit: contain;
+  object-fit: cover;
 }
 .user-name {
   display: grid;
@@ -2059,15 +2090,15 @@ h4.suggestions {
 }
 .pull-left.side-user-head ul.list-inline span.fans-follow {
   color: #000;
-  font-size: 18px;
-  padding: 0 3px 0 0;
+  font-size: 15px;
+  /* padding: 0 3px 0 0; */
 }
 .pull-left.side-user-head ul.list-inline li a {
   font-weight: 500;
 }
 a.sidebar-menus-item {
   cursor: pointer;
-  padding: 5px 0;
+  padding: 6px 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2075,7 +2106,7 @@ a.sidebar-menus-item {
   -ms-flex-align: center;
   align-items: center;
   color: var(--text-color);
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 500;
   border: none;
   background: none;
@@ -2083,6 +2114,12 @@ a.sidebar-menus-item {
   -webkit-transition: color 0.3s ease;
   transition: color 0.3s ease;
   position: relative;
+}
+a.sidebar-menus-item .desc {
+  font-size: 14px;
+  color: rgb(138, 150, 163);
+  font-weight: normal;
+  padding-left: 0.5em;
 }
 .right-sidebar-menu-item {
   padding: 6px 0 0;
@@ -2559,7 +2596,7 @@ button.chat-btn-one svg.g-icon {
 hr.solid {
   display: block;
   border: 1px solid rgba(138, 150, 163, 0.12);
-  width: 80%;
+  /* width: 80%; */
   margin-right: 0px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -2569,6 +2606,7 @@ hr.solid {
   display: -ms-flexbox;
   display: flex;
   min-width: 0;
+  align-items: center;
 }
 span.friend-name {
   overflow: hidden;
@@ -2601,8 +2639,8 @@ span.friend-name {
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: center;
-  padding-top: 30px;
-  padding-bottom: 35px;
+  padding-top: 1.7em;
+  /* padding-bottom: 35px; */
   margin-bottom: 10px;
   flex-wrap: nowrap;
   /* margin: 0 0 6px; */
@@ -2611,6 +2649,7 @@ span.friend-name {
   display: -ms-flexbox;
   display: flex;
   border-bottom: 1px solid rgba(138, 150, 163, 0.2);
+  min-height: 95px;
 }
 button.chat-header-back {
   margin-left: 0;
@@ -2750,8 +2789,12 @@ span.user-id {
   font-size: 14px;
   color: rgb(138, 150, 163);
   font-weight: normal;
-  margin-left: 5px;
 }
+
+.notification-list span.user-id{
+  padding-left: 0.5em;
+}
+
 span.post-user-notify {
   padding: 2px 0px 7px;
   overflow-wrap: break-word;
@@ -3722,7 +3765,7 @@ a.conect-btn {
 }
 h1.chat-page-title {
   height: 30px;
-  padding: 0 0 0 3px;
+  padding: 0 0 0 15px;
   margin-right: auto;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -3783,7 +3826,7 @@ span.friend-username {
   font-size: 13px;
 }
 .chat-item:first-child {
-  margin-top: 20px;
+  margin-top: 10px;
 }
 .chat-msg {
   padding-bottom: 0;
@@ -3816,7 +3859,7 @@ span.friend-username {
   display: flex;
 }
 .msg-header {
-  min-height: 100px;
+  min-height: 95px;
   flex-shrink: 0;
   position: sticky;
   top: 0;
@@ -3879,8 +3922,8 @@ span.friend-username {
 }
 
 .chat-wrapper .chat-image.chat-image-default {
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
 }
 
 .chat-wrapper .chat-message {
@@ -3956,7 +3999,7 @@ span.friend-username {
   display: table;
   text-align: start;
   background: rgba(138, 150, 163, 0.12);
-  border-radius: 6px 6px 6px 0;
+  border-radius: 6px;
   margin-right: auto;
   max-width: 100%;
   padding: 8px 12px;
@@ -4086,7 +4129,7 @@ a.chat-user-name {
 .chats-post-footer {
   margin-bottom: 5px;
   margin: 0 0 12px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .chat-post {
   position: relative;
@@ -4132,7 +4175,7 @@ button.g-btn.m-rounded.b-chat__btn-submit {
   border-radius: 1000px;
   position: absolute;
   right: 10px;
-  bottom: 30px;
+  bottom: 18px;
   padding: 0;
   width: 48px;
   height: 48px;
@@ -4575,8 +4618,10 @@ span.new-user-name:after {
   display: inline-block;
 }
 img.svg-clone.chat-close {
-  width: 18px;
-  height: auto;
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+  object-fit: cover;
 }
 section.message-page.new-msg h1.chat-page-title {
   bottom: 0px;
@@ -7725,4 +7770,66 @@ input.authentication-input {
 .landing-main-wrapper{
   padding-top: 4em;
   padding-bottom: 2em;
+}
+
+.message-no-data-found-sec{
+  margin: auto;
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  top: 100%;
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
+  text-align: center;
+}
+
+.message-no-data-found-sec h4{
+  font-size: 2em;
+  font-weight: 700;
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 2em;
+}
+
+.message-no-data-found-sec .save-btn{
+  width: 220px;
+}
+
+.bookmark-no-data-found-sec {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  text-align: center;
+}
+
+.bookmark-no-data-found-sec .icon-bookmark {
+  font-size: 5em;
+  color: #8a96a3;
+}
+
+.bookmark-no-data-found-sec .desc {
+  font-size: 1.5em;
+  font-weight: 700;
+  color: #8a96a3;
+}
+
+.message-page .dropdown-menu.show:after {
+  right:4px!important;
+  left: auto;
+}
+
+.message-page .form-control {
+  height: 90px!important;
+  border-bottom:0;
+}
+
+.message-page .form-control:focus{
+  border-bottom: 0!important;
 }
