2 loader done and no data found and ui fixes

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -65,9 +65,9 @@ Version: 1.0
     .scrollbar{
         height: 35vh;
     }
-    .msg-row-chat{
+    /* .msg-row-chat{
         height: 35vh;
-    }
+    } */
     .overflow {
         min-height: 60vh;
     }
