--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6218,12 +6218,15 @@ input.authentication-input {
   .chat-wrapper {
     display: block;
     width: 100%;
-    height: 375px;
+    height: 65vh;
     overflow-y: scroll;
   }
   section.notification-page {
     margin: 60px 0px 120px;
   }
+  /* .main-wrap-sec {
+    min-height: 95vh;
+  } */
 }
 
 @media (min-width: 1025px) and (max-width: 1280px) {
