--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -15,14 +15,7 @@ Version: 1.0
 
 @media (min-width: 992px) {}
 
-@media (min-width: 1440px) {
-    .chat-wrapper {
-        height: 70vh;
-    }
-     .msg-row-chat {
-        height: 70vh;
-    }
-}
+@media (min-width: 1440px) {}
 
 @media (max-width: 1199.98px) {
     .dm-width{
@@ -69,12 +62,6 @@ Version: 1.0
     .country-sec{
         text-align: center;
     }
-    .scrollbar{
-        height: 50vh;
-    }
-    /* .msg-row-chat{
-        height: 35vh;
-    } */
     .overflow {
         min-height: 60vh;
     }
