--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4547,7 +4547,6 @@ span.new-user-name:after {
 .post-btn {
   background: #0091ea!important;
   border-color: #0091ea!important ;
-  opacity: 0.4 !important;
   min-width: 72px !important;
   /* pointer-events: none; */
   border-radius: 1000px !important;
@@ -4599,6 +4598,9 @@ span.new-user-name:after {
   width: 100%;
   float: left;
   margin-top: 20px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid rgba(138, 150, 163, 0.2);
 }
 #poll-toggle {
   height: 0;
@@ -4714,12 +4716,12 @@ button.add_field_button {
   border: none;
   outline: none;
 }
-.left-half.post-write::after {
+/* .left-half.post-write::after {
   content: "";
   display: block;
   border-bottom: 1px solid rgba(138, 150, 163, 0.2);
   height: 10px;
-}
+} */
 .post-write span {
   display: inline-block;
   padding: 0;
@@ -7984,4 +7986,54 @@ input.authentication-input {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: normal;
+}
+
+
+/*Create post Changes*/
+.post-title-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 35em;
+  margin-left: 2em;
+}
+
+.post-title-content .fa-window-close {
+  font-size:1.3em;
+  color: #F32013;
+}
+
+.post-title-content h4 {
+  margin-bottom: 0;
+  color: #242529;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  width: 15em;
+}
+
+.post-img-preview-sec {
+  margin-top: 2em;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+  width: 100%;
+  height: 15em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-left: 5em;
+}
+
+.post-img-preview-sec .post-video-preview{
+ width: 100%;
+ border: 5px solid rgba(0, 0, 0, 0.1);
+}
+
+.post-img-preview-sec .fa-times-circle{
+  position: absolute;
+  right: 10px;
+  top: 0px;
+  font-size: 1.3em;
+  color: #F32013;
 }
