--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -141,6 +141,7 @@ Version: 1.0
     }
     .search-box:hover > .search-text{
         padding: 2px 10px;
+        width: 100%;
     }
     .scrollbar{
         overflow-y:auto;
@@ -302,9 +303,32 @@ Version: 1.0
         width: 100%;
         height: auto;
     }
+    /* .search-box {
+        justify-content: center;
+    } */
+    .no-data-found-sec .no-data-found-img-sec img{
+        max-width: 100%;
+    }
     .search-dropdown-sec {
-        right: 40px!important;
+        right: 55px!important;
+        top: 133px;
+    }
+    .search-btn{
+        width: 46px;
     }
 }
 
-@media (max-width: 575.98px) {}
+
+@media (max-width: 375px) {
+    .search-dropdown-sec {
+        right: 35px!important;
+        top: 133px;
+    }
+}
+
+@media (max-width: 320px) {
+    .search-dropdown-sec {
+        right: 10px!important;
+        top: 133px;
+    }
+}
